Fix IE10 Scrollbar

--- a/excelsior/scss/excelsior/components/_global.scss
+++ b/excelsior/scss/excelsior/components/_global.scss
@@ -1,6 +1,10 @@
 // Base styles
 // -----------------------
 
+html {
+    -ms-overflow-style: scrollbar; // Stops IE10 from plopping a scroller over your content
+}
+
 body {
     font-family: $font-sans;
 }
